# nix-basics

./: .gitignore  README.md  file.nix  flake.nix  my-haskell-project.cabal
src/: Box.hs  Main.hs  Transformer.hs
