cabal-version: 2.4
name: my-haskell-project
version: 0.1.0.0
synopsis: Minimal flake-backed Haskell project
category: Development
author: Your Name
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple

library
  exposed-modules:
  hs-source-dirs: src
  build-depends:
      base >=4.14 && <5,
      array,
      vector,
      transformers >=0.5
  default-language: Haskell2010

executable my-haskell-project-exe
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2
  build-depends:
      base >=4.14 && <5,
      array,
      vector,
      transformers >=0.5
  default-language: Haskell2010
